linux/rpi_passerelle/rules.v6
# Generated by xtables-save v1.8.2 on Thu Nov  7 20:43:02 2019
*nat
:PREROUTING ACCEPT [4946:531663]
:INPUT ACCEPT [3502:390469]
:POSTROUTING ACCEPT [1960:170180]
:OUTPUT ACCEPT [537:31170]
COMMIT
# Completed on Thu Nov  7 20:43:02 2019
# Generated by xtables-save v1.8.2 on Thu Nov  7 20:43:02 2019
*filter
:INPUT DROP [361:28184]
:FORWARD DROP [345:39312]
:OUTPUT ACCEPT [16523:2011515]
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i eth0 -m state --state NEW -j ACCEPT
-A INPUT -s fe80::/16 -i eth1 -p udp -m udp --dport 546 -j ACCEPT
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 1 -j ACCEPT
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 2 -j ACCEPT
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 3 -j ACCEPT
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 4 -j ACCEPT
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 128 -m limit --limit 15/sec -j ACCEPT
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 129 -m limit --limit 15/sec -j ACCEPT
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 134 -m hl --hl-eq 255 -j ACCEPT
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 135 -m hl --hl-eq 255 -j ACCEPT
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 136 -m hl --hl-eq 255 -j ACCEPT
-A FORWARD -i eth1 -o eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth0 -o eth1 -j ACCEPT
-A FORWARD -i eth0 -o eth0 -j ACCEPT
COMMIT
# Completed on Thu Nov  7 20:43:02 2019
# Generated by xtables-save v1.8.2 on Thu Nov  7 20:43:02 2019
*mangle
:PREROUTING ACCEPT [183886:132602394]
:INPUT ACCEPT [17516:1759535]
:FORWARD ACCEPT [164142:130681787]
:OUTPUT ACCEPT [16523:2011515]
:POSTROUTING ACCEPT [180467:132674782]
COMMIT
# Completed on Thu Nov  7 20:43:02 2019
